# Pangolin

./: .gitignore  README.md  example_usage.ipynb  pangolin_env.yml  pyproject.toml
examples/: error_w_encoding_example.csv
pangolin/: __init__.py  batch.py  data_models.py  genes.py  legacy.py  model.py  pangolin.py  processors.py  score.py  utils.py
scripts/: create_db.py  custom_usage.py
tests/: test_processors.py  test_utils.py
tests/data/: medium.csv  small.csv  small.vcf
tests/data/expected/: medium_out.csv  small_out.csv  small_out.vcf
tests/data/reference/: chr19.fa.gz.fxi  chr19_genes_filtered.db  chr19_genes_filtered.gtf
